Removed migrations profile

--- a/base.cfg
+++ b/base.cfg
@@ -1,7 +1,6 @@
 [buildout]
 
-extensions = buildout.dumppickedversions
-             mr.developer
+extensions = mr.developer
 dump-picked-versions-file = versions-picked.cfg
 overwrite-picked-versions-file = true
 allow-picked-versions = false
@@ -26,6 +25,7 @@ auto-checkout = appy
                 communesplone.layout
                 plonetheme.imioapps
                 Products.PloneMeeting
+                imio.pm.locales
 
 # Add additional eggs here
 # elementtree is required by Plone
@@ -55,6 +55,7 @@ unzip = true
 
 [sources]
 Products.PloneMeeting = svn http://svn.communesplone.org/svn/communesplone/Products.PloneMeeting/trunk
+imio.pm.locales = svn http://svn.communesplone.org/svn/communesplone/imio.pm.locales/trunk
 communesplone.iconified_document_actions = svn http://svn.communesplone.org/svn/communesplone/communesplone.iconified_document_actions/trunk/
 communesplone.layout = svn http://svn.communesplone.org/svn/communesplone/communesplone.layout/trunk
 plonetheme.imioapps = svn http://svn.communesplone.org/svn/communesplone/plonetheme.imioapps/trunk
@@ -111,7 +112,6 @@ zcml =
     plonetheme.imioapps
 
 products =
-    ${productdistros:location}
     ${svnproducts:location}
 
 [zopepy]
