--- a/versions-base.cfg
+++ b/versions-base.cfg
@@ -13,3 +13,11 @@ infrae.subversion = 1.4.5
 collective.plonefinder = 1.0.3
 collective.quickupload = 1.5.8
 demjson = 1.6
+
+#Required by:
+#Products.PloneMeeting
+collective.documentviewer = 2.2.2b2
+
+#Required by:
+#collective.documentviewer 2.2.2b3
+repoze.catalog = 0.8.2
