Add Products.MeetingCommunes as a dependency for tests

--- a/dev.cfg
+++ b/dev.cfg
@@ -11,7 +11,10 @@ parts +=
 extensions +=
     mr.developer
 
+auto-checkout += Products.MeetingCommunes
+
 [sources]
+Products.MeetingCommunes = svn http://svn.communesplone.org/svn/communesplone/Products.MeetingCommunes/trunk
 
 [instance1]
 #use the instance1 eggs to extends the base eggs defined in [buildout]
