Finished tests overrides, see ticket #6362

--- a/dev.cfg
+++ b/dev.cfg
@@ -12,6 +12,7 @@ extensions +=
     mr.developer
 
 auto-checkout += Products.MeetingCommunes
+always-checkout = force
 
 [sources]
 Products.MeetingCommunes = svn http://svn.communesplone.org/svn/communesplone/Products.MeetingCommunes/trunk
@@ -41,6 +42,7 @@ defaults = ['--auto-color', '--auto-progress']
 eggs =
     Products.MeetingLalouviere [test]
     ipdb
+
 environment = testenv
 
 [testenv]
