--- a/base.cfg
+++ b/base.cfg
@@ -106,6 +106,7 @@ zcml =
     communesplone.layout
     collective.ckeditor
 #This is needed so plone translations overrides are taken into account
+    Products.MeetingLalouviere
     Products.PloneMeeting
     Products.PloneMeeting-overrides
     plonetheme.imioapps
