Removed useless eggs (already included as dependencies), added Products.PloneHotfix20130618, use zc.buildout 2.1.1.  This close ticket #6487

--- a/base.cfg
+++ b/base.cfg
@@ -32,6 +32,12 @@ eggs =
     Plone
     Pillow
 #    PyXML
+#- hotfix -#
+#    Products.PloneHotfix20110720  # <= 3.3.5 , <= 4.0.3
+#    Products.PloneHotfix20110531  # <= 3.3.5 , <= 4.0.5
+#    Products.PloneHotfix20121106  # <= 4.2.2, <= 4.3a2
+#    Products.Zope_Hotfix_20110622  # <= 3.3.5 , <= 4.0.7, <= 4.1rc3
+    Products.PloneHotfix20130618  # <= 4.2.5 , <= 4.3.1
 
 # Reference any eggs you are developing here, one per line
 # e.g.: develop = src/my.package
@@ -91,25 +97,18 @@ environment-vars =
 eggs =
     ${buildout:eggs}
     Products.DocFinderTab
-    communesplone.iconified_document_actions
     communesplone.layout
-    collective.ckeditor
-    appy
     Products.MeetingLalouviere
     Products.PloneMeeting
-    plonetheme.imioapps
 
 # If you want to register ZCML slugs for any packages, list them here.
 # e.g. zcml = my.package my.other.package
 zcml =
-    communesplone.iconified_document_actions
     communesplone.layout
-    collective.ckeditor
 #This is needed so plone translations overrides are taken into account
     Products.MeetingLalouviere
     Products.PloneMeeting
     Products.PloneMeeting-overrides
-    plonetheme.imioapps
 
 products =
     ${svnproducts:location}
