--- a/versions-base.cfg
+++ b/versions-base.cfg
@@ -1,4 +1,7 @@
 [versions]
+Products.PloneHotfix20130618 = 1.3
+zc.buildout = 2.1.1
+distribute = 0.6.49
 Pillow = 1.7.8
 Products.DocFinderTab = 1.0.5
 collective.ckeditor = 3.6.11
