Added missing packages, including ldap

--- a/base.cfg
+++ b/base.cfg
@@ -13,7 +13,7 @@ parts =
 
 # If you want to get the last versions of eggs, you have to comment the line "versions-prod.cfg"
 extends =
-    http://dist.plone.org/release/4.2.5/versions.cfg
+    http://dist.plone.org/release/4.2.6/versions.cfg
     versions-base.cfg
 
 versions=versions
@@ -25,6 +25,7 @@ auto-checkout = appy
                 plonetheme.imioapps
                 Products.PloneMeeting
                 imio.pm.locales
+                imio.migrator
 
 # Add additional eggs here
 # elementtree is required by Plone
@@ -37,7 +38,7 @@ eggs =
 #    Products.PloneHotfix20110531  # <= 3.3.5 , <= 4.0.5
 #    Products.PloneHotfix20121106  # <= 4.2.2, <= 4.3a2
 #    Products.Zope_Hotfix_20110622  # <= 3.3.5 , <= 4.0.7, <= 4.1rc3
-    Products.PloneHotfix20130618  # <= 4.2.5 , <= 4.3.1
+#    Products.PloneHotfix20130618  # <= 4.2.5 , <= 4.3.1
 
 # Reference any eggs you are developing here, one per line
 # e.g.: develop = src/my.package
@@ -61,6 +62,7 @@ unzip = true
 [sources]
 Products.PloneMeeting = svn http://svn.communesplone.org/svn/communesplone/Products.PloneMeeting/trunk
 imio.pm.locales = svn http://svn.communesplone.org/svn/communesplone/imio.pm.locales/trunk
+imio.migrator = svn http://svn.communesplone.org/svn/communesplone/imio.migrator/trunk
 communesplone.iconified_document_actions = svn http://svn.communesplone.org/svn/communesplone/communesplone.iconified_document_actions/trunk/
 communesplone.layout = svn http://svn.communesplone.org/svn/communesplone/communesplone.layout/trunk
 plonetheme.imioapps = svn http://svn.communesplone.org/svn/communesplone/plonetheme.imioapps/trunk
@@ -70,6 +72,7 @@ appy = svn http://svn.communesplone.org/svn/communesplone/appy/tags/0.8.3
 recipe = infrae.subversion
 urls =
     http://svn.communesplone.org/svn/communesplone/CPUtils/trunk CPUtils
+    http://svn.communesplone.org/svn/communesplone/CPFCKTemplates/trunk CPFCKTemplates
 
 [omelette]
 recipe = collective.recipe.omelette
@@ -100,6 +103,7 @@ eggs =
     communesplone.layout
     Products.MeetingLalouviere
     Products.PloneMeeting
+    plone.app.ldap
 
 # If you want to register ZCML slugs for any packages, list them here.
 # e.g. zcml = my.package my.other.package
