--- a/versions-base.cfg
+++ b/versions-base.cfg
@@ -1,4 +1,5 @@
 [versions]
+Products.Archetypes = 1.9.4
 Products.PloneHotfix20130618 = 1.3
 zc.buildout = 2.1.1
 distribute = 0.6.49
@@ -11,10 +12,21 @@ mr.developer = 1.25
 plone.recipe.distros = 1.5
 infrae.subversion = 1.4.5
 
+plone.app.ldap = 1.3.0
+collective.captcha = 1.7
+
 #Required by:
-#collective.ckeditor 3.6.11
-collective.plonefinder = 1.0.3
-collective.quickupload = 1.5.8
+#plone.app.ldap 1.3.0
+Products.PloneLDAP = 1.2
+Products.LDAPUserFolder = 2.26
+Products.LDAPMultiPlugins = 1.14
+python-ldap = 2.4.13
+dataflake.fakeldap = 1.1
+
+#Required by:
+#collective.ckeditor 3.6.12
+collective.plonefinder = 1.0.4
+collective.quickupload = 1.6.0
 demjson = 1.6
 
 #Required by:
@@ -24,3 +36,7 @@ collective.documentviewer = 2.2.2b2
 #Required by:
 #collective.documentviewer 2.2.2b3
 repoze.catalog = 0.8.2
+
+#Required by:
+#collective.captcha = 1.7
+skimpyGimpy = 1.4
