--- a/src/Products/MeetingLalouviere/model/generate.conf
+++ b/src/Products/MeetingLalouviere/model/generate.conf
@@ -16,7 +16,7 @@ author: Gauthier Bastien, Stephan Geulette
 e-mail: g.bastien@imio.be, s.geulette@imio.be
 
 ## Set default copyright
-copyright: CommunesPlone
+copyright: Imio.be
 
 
 [STORAGE]
