--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,7 +34,7 @@ jobs:
           cache-name: cache-eggs
         with:
           CACHE_KEY: ${{ runner.os }}-build-${{ env.cache-name }}-${{ matrix.python-version }}
-          TEST_COMMAND: OO_SERVER=localhost OO_PORT=2002 bin/testlalouvierecpas --layer=\!ROBOT --test=\!\(testSetup\|testPerf\) -s Products.MeetingLalouviere
+          TEST_COMMAND: OO_SERVER=localhost OO_PORT=2002 bin/testlalouviere --layer=\!ROBOT --test=\!\(testSetup\|testPerf\) -s Products.MeetingLalouviere
           INSTALL_DEPENDENCIES_COMMANDS: |
             sudo pip install -r requirements-tests.txt
           MATTERMOST_WEBHOOK_URL: ${{ secrets.DELIB_MATTERMOST_WEBHOOK_URL }}
