feat(tests): allow to specify a branch for Products.PloneMeeting

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,21 +1,25 @@
 [buildout]
 extends = https://raw.githubusercontent.com/IMIO/buildout.pm/refs/heads/master/communes-dev.cfg
 
-auto-checkout +=
-    Products.MeetingLalouviere
+extensions =
+    buildout.environ
+    mr.developer
 
-parts +=
+develop = .
+
+auto-checkout =
+     Products.PloneMeeting
+
+parts =
     testlalouviere
+    code-analysis
 
-[instance1]
-eggs +=
-    Products.MeetingLalouviere
-
-zcml +=
-    Products.MeetingLalouviere
 
 [sources]
-Products.MeetingLalouviere = git ${remotes:imio}/Products.MeetingLalouviere.git pushurl=${remotes:imio_push}/Products.MeetingLalouviere.git branch=master
+Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git branch=${__environ__:PM_BRANCH_NAME}
+
+[versions]
+buildout.environ = 1.2.0
 
 [testlalouviere]
 recipe = zc.recipe.testrunner
