--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,24 +2,23 @@
 extends = https://raw.githubusercontent.com/IMIO/buildout.pm/refs/heads/master/communes-dev.cfg
 
 extensions =
-    buildout.environ
+#    buildout.environ
     mr.developer
 
 develop = .
 
-auto-checkout =
-     Products.PloneMeeting
+#auto-checkout =
+#     Products.PloneMeeting
 
 parts =
     testlalouviere
     code-analysis
 
-
 [sources]
-Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git branch=${__environ__:PM_BRANCH_NAME}
+#Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git branch=${__environ__:PM_BRANCH_NAME}
 
 [versions]
-buildout.environ = 1.2.0
+#buildout.environ = 1.2.0
 
 [testlalouviere]
 recipe = zc.recipe.testrunner
